# NeuroAI-GraphRAG

./: .env.example  .gitignore  chat.py  compose.yml  main.py  pyproject.toml
data/raw/: raw_arxiv_papers.json
src/: config.py
src/data_source/: arxiv_api_client.py
src/db_source/: connection.py  neo4j_writer.py  qdrant_manager.py
src/extract/: base_extractor.py  hf_extract.py  ollama_extract.py  schema.py
src/generation/: answer_gen.py
src/retrieval/: graph_retriever.py
src/utils/: purge_db.py
tests/: evaluate_pipeline.py  generate_dataset.py  test_schema.py
